[package]
name = "tonic-mock"
version = "0.4.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>", "RoMarketplace Development Team"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/tonic-mock"
repository = "https://github.com/tyrchen/tonic-mock"
homepage = "https://github.com/tyrchen/tonic-mock"
description = """
Test utilities for easy mocking tonic streaming interface
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["tonic", "testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["test-utils"]
test-utils = ["async-stream"]
lazy-streaming = []

[dependencies]
async-stream = { version = "0.3", optional = true }
bytes = "1"
futures = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1.3"
prost = "0.14"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
tokio-test = "0.4.4"
tonic = "0.14"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }
rand = "0.8"
tonic-mock = { path = ".", features = ["test-utils"] }

[[bench]]
name = "stream_bench"
harness = false
path = "bench/stream_bench.rs"

[[bin]]
name = "diagnostic"
path = "bin/diagnostic.rs"
